# LetuchPlatform

./: .env.example  .gitignore  .vercelignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  vercel.json
api/: index.py
apuntes/: 01-reporte-arquitectura.md  02-manual-seguridad.md  03-reporte-seguridad.md  FLEX.md
sql/: 001_schema.sql  03-invalidar-sesion.sql  productos_final.csv  productos_limpios.csv  supabase_schema.sql  supabase_setup.sql
src/: config.py  database.py  exceptions.py  forms.py  main.py  models.py  rate_limiter.py  routes.py  utils.py
src/repos/: cart_repo.py  interfaces.py  order_repo.py  product_repo.py  user_repo.py
src/routes/: __init__.py  auth.py  cart.py  deps.py  orders.py  products.py  static.py
src/services/: auth_service.py  cart_service.py  order_service.py
static/css/: output.css
static/fonts/: archivo.css  satoshi.css
static/js/: tailwind-config.js
static/templates/: base.html  index.html
static/templates/sections/: carrito.html  checkout-confirmacion.html  contacto.html  fragmento_card.html  inicio.html  login.html  mis_pedidos.html  pago-exitoso.html  pago-fallido.html  pedido_detalle.html  perfil.html  register.html  servicios.html
tests/: conftest.py  test_auth.py  test_cart_repo.py  test_forms.py  test_models.py  test_order_repo.py  test_product_repo.py  test_routes.py  test_user_repo.py
tests/benchmarks/: conftest.py  test_latency.py  test_memory.py  test_response_size.py  test_throughput.py
